# VoiceFlow

./: .gitattributes  .gitignore  CLAUDE.md  README.md  VoiceFlow.spec  pyproject.toml  setup.py
.github/workflows/: quality-gates.yml
app/: config.py  dictionary.py  main.py
app/audio/: capture.py  file_importer.py  meeting_recorder.py  vad.py
app/core/: __init__.py  audio_device_manager.py  model_manager.py  signals.py
app/input/: hotkey.py  text_inserter.py
app/resources/: default_dictionary.json
app/resources/icons/: voiceflow.icns
app/storage/: __init__.py  audio_store.py  database.py  models.py
app/transcription/: __init__.py  diarization.py  meeting_summarizer.py  meeting_transcriber.py  text_cleaner.py  text_refiner.py  whisper_engine.py
app/ui/: __init__.py  overlay.py  recording_messages.py
app/ui_qt/: __init__.py  main_window.py
app/ui_qt/pages/: __init__.py  dashboard_page.py  meeting_detail_page.py  meetings_page.py  onboarding_page.py  recording_page.py  settings_page.py
app/ui_qt/styles/: __init__.py  stylesheets.py  theme.py
app/ui_qt/widgets/: __init__.py  device_selector.py  model_status.py  recording_controls.py  search_bar.py  transcript_view.py  waveform_widget.py
scripts/: build.sh  download_models.py  generate_logo_icon.py  install.sh  latency_report.py
tests/: test_config_llm_model.py  test_mode_inference.py  test_overlay_messages.py  test_stt_resilience.py  test_text_inserter_delays.py  test_transcription_guards.py
